# siwp2005-building-pip-example

./: CHANGELOG.md  README.md  pyproject.toml  setup.cfg  setup.py
src/calculator.egg-info/: PKG-INFO  SOURCES.txt
src/scientific_calculator.egg-info/: PKG-INFO  SOURCES.txt
