[project]
name = "siwp2005_scientific_calculator_hendrikTpl"
version = "0.0.1"
authors = [{ name="hendrikTpl", email="hendrik.gian@gmail.com" },]
description = "SI-UKKW-SIWP2005-OOP, A simple scientific calculator package case study"
readme = "README.md"
requires-python = ">=3.8"

classifiers =
    "Programming Language :: Python :: 3"
    "License :: OSI Approved :: MIT License"
    "Operating System :: OS Independent"


[project.urls]
Homepage = "https://github.com/hendrikTpl/siwp2005-pip-test"
Issues = "https://github.com/hendrikTpl/siwp2005-pip-test/issues"

